<resources>
    <string name="app_name">CoCono</string>
    <string name="title_activity_welcome">Inicio</string>
    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="start">Iniciar</string>
    <string name="slide_1_title">¡Bienvenido!</string>
    <string name="slide_1_desc">Comparte tus hábitos diarios y visualiza los efectos en salud</string>
    <string name="slide_2_title">Compartir</string>
    <string name="slide_2_desc">Comparte tus hábitos alimenticios y actividades diarias</string>
    <string name="slide_3_title">Visualizar</string>
    <string name="slide_3_desc">Visualiza los hábitos y actividades que has agregado</string>
    <string name="slide_4_title">Simular</string>
    <string name="slide_4_desc">Simula los efectos de tus hábitos y actividades en un adulto</string>
    <string name="slide_4_desc_reflexive">Comprende en un reporte qué tan saludables son tus hábitos y actividades</string>
    <string name="play_again_desc">Para ver de nuevo, limpia los datos de la app</string>
    <string name="play_again">Ver de nuevo</string>
    <string name="request_permission">El permiso de la cámara es requisito para realizar publicaciones.</string>
    <string name="request_media_permission">El permiso de lectura y escritura es requerido para realizar publicaciones</string>
    <string name="permission_indication">El permiso de la cámara es requisito para realizar publicaciones y lo has deshabilitado permanentemente, si cambias de opinión ve a ajustes,
        busca la aplicación y habilitalo.</string>
    <string name="permission_media_indication">El permiso de lectura y escritura es requisito para realizar publicaciones y lo has deshabilitado permanentemente, si cambias de opinión ve a ajustes,
        busca la aplicación y habilitalo.</string>
    <string name="intro_message">Texto de introducción</string>
    <string name="camera_error">Es necesario el acceso a la camara</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_m_home">CoCono</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Iniciar</string>
    <string name="prompt_email">Nombre</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string name="new_post_title_new_data">Ajustes publicación</string>
    <string name="new_post_name">NOMBRE DE LA PUBLICACIÓN</string>
    <string name="new_post_image">IMAGEN</string>
    <string name="new_post_choose_image">ELEGIR IMAGEN</string>
    <string name="new_post_category">Categoría</string>
    <string name="new_post_frecuency">Frecuencia</string>
    <string name="conf_name">Nombre</string>
    <string name="conf_weight">Peso(KG)</string>
    <string name="conf_gender">Sexo</string>
    <string name="terms_title">Términos y Condiciones</string>
    <string name="terms_subtitle">Uso de aplicaciones del Laboratorio de Diseño Estratégico de la Universidad de Caldas
        Por favor, lea con atención los términos y condiciones.</string>
    <string name="terms_subtitle_paragraph2">1. Servicios Ofrecidos</string>
    <string name="terms_paragraph2">1.1 Estos términos aplican para regular el uso de la aplicación móvil ofrecida por el Laboratorio de Diseño Estratégico de la Universidad de Caldas
        a sus usuarios, es decir, permitir compartir información sobre los hábitos (alimenticios y de actividades) por parte
        de los usuarios registrados. 1.2 La aplicación móvil ofrecida por el Laboratorio de Diseño Estratégico de la Universidad de
        Caldas consiste en acercar a usuarios a través de una red social específica del área de la salud, donde se comparten hábitos
        alimenticios y actividades realizadas cotidianamente con el fin de ser visualizado y valorado por profesionales de la salud. 1.3 Se aclara al usuario - el cual se declara
        consciente - que el servicio ofrecido por el Laboratorio de Diseño Estratégico de la Universidad de Caldas está relacionado sólo como espacio para compartir imágenes y comentarios
        personales de hábitos sin incluir asesorías directas con expertos profesionales en salud, nutrición y actividades físicas, siendo estos tres aspectos responsabilidad integral del usuario,
        a quien deberán ser direccionados cualquier reclamo acerca de problemas derivados de la información compartida en la red móvil.</string>
    <string name="terms_subtitle_paragraph3">2. Registro</string>
    <string name="terms_paragraph3">2.1 El usuario, para utilizar los servicios arriba descritos, deberá tener la capacidad jurídica para actuar civilmente y deberá necesariamente entregar la información
        exigida por el registro, asumiendo integralmente la responsabilidad (incluso civil y criminal) por la falta de veracidad en la información ingresada en el registro, que podrá ser verificado en cualquier
        momento por el Laboratorio de Diseño Estratégico de la Universidad de Caldas. 2.1.1 En caso de ingresar información incorrecta, falsa o no confirmada, así como existir la negativa de corregirla o enviar
        documentación que comprueba la corrección, CoRus y CoCono se reservan el derecho de no concluir el registro en curso o, inclusive, bloquear el registro ya existente, impidiendo al usuario utilizar los
        servicios hasta que, a criterio del Laboratorio de Diseño Estratégico de la Universidad de Caldas, la situación de anomalía sea regularizada. El Laboratorio de Diseño Estratégico de la Universidad de
        Caldas se reserva el derecho de impedir la tentativa deliberada de eludir las reglas aquí descritas, obligatorias para todos los usuarios. El Laboratorio de Diseño Estratégico de la Universidad de Caldas
        también actuará de la misma forma en caso de que verifique incumplimiento de parte del usuario en cualquier obligación prevista en el presente acuerdo de términos de uso. 2.2 Una vez efectuado con éxito el registro,
        el usuario tendrá acceso a los servicios mediante login y contraseña, datos que se compromete a no divulgar a terceros, haciendo suya la responsabilidad exclusiva de cualquier contenido compartido con el uso de su login y contraseña.</string>
    <string name="terms_subtitle_paragraph4">3. Obligaciones del Usuario</string>
    <string name="terms_paragraph4">3.1 Una vez realizado el registro del usuario, este se obliga a no divulgar a terceros el login y contraseña de acceso, ni permitir el uso de tales informaciones por parte de terceros, responsabilizándose por las
        consecuencias del uso de login y contraseña de su titularidad. 3.2 Es obligación del usuario proveer información de registro totalmente verídica y exacta, responsabilizándose exclusiva e integralmente (en todas las áreas jurídicas) por todo el
        contenido informado en el registro, manteniendo actualizada y confirmada la dirección para entrega de los productos solicitados. </string>
    <string name="terms_subtitle_paragraph5">4. Obligaciones del Laboratorio de Diseño Estratégico de la Universidad de Caldas</string>
    <string name="terms_paragraph5">4.1 La aplicación móvil del Laboratorio de Diseño Estratégico de la Universidad de Caldas permite que los usuarios debidamente registrados compartan imágenes desde sus dispositivos móviles, desde publicaciones realizadas
        por otros usuarios y desde sus dispositivos móviles. 4.2 Proteger a través de servidores de almacenamiento o cualquier otro medio magnético de alta seguridad, la confidencialidad de toda la información y registro relacionado con los usuarios. Sin embargo,
        no responderá por la reparación de los daños que puedan derivarse de la aprehensión o cooptación de datos por parte de terceros que accedan a esta información de manera no autorizada, rompiendo los sistemas de seguridad establecidos.</string>
    <string name="terms_subtitle_paragraph6">5. Modificaciones de estos términos</string>
    <string name="terms_paragraph6">5.1 Estas condiciones de uso, podrán en cualquier momento, ser modificadas en su contenido o parte de él para ajustes e inserciones, todas ellas encaminadas a mejorar los servicios prestados. 5.2 Las nuevas condiciones serán
        efectivas tan pronto como sean publicadas en la aplicación móvil, siendo posible para que el usuario manifieste oposición a cualquiera de los términos modificados, debiendo expresar de manera escrita a través del correo electrónico lab.strategic.design@gmail.com
        lo que generará la cancelación de su registro.</string>
    <string name="terms_subtitle_paragraph7">6. Canal de comunicación</string>
    <string name="terms_paragraph7">6.1 La comunicación entre el Laboratorio de Diseño Estratégico de la Universidad de Caldas y el usuario, se puede realizar por medio del correo electrónico especificado en el punto “5.1”, el usuario debe mantener en su información de registro
        el email por medio del cual se enviarán las comunicaciones dirigidas a este por parte de Laboratorio de Diseño Estratégico de la Universidad de Caldas, desde luego aplicándose la validez jurídica y efectividad de ese medio electrónico de intercambio de comunicación.</string>
    <string name="terms_subtitle_paragraph8">7. ACEPTACIÓN DE TÉRMINOS DE USO</string>
    <string name="terms_paragraph8">7.1 El usuario declara haber leído, entendido y aceptado todas las reglas, condiciones y obligaciones establecidas en los presentes términos de uso.</string>
    <string name="terms_subtitle_paragraph9">8. Jurisdicción de Elección</string>
    <string name="terms_paragraph9">8.1 Las partes eligen como competente para resolver las controversias que puedan surgir de la interpretación y ejecución de estos términos al Departamento de Diseño Visual de la Universidad de Caldas.Última actualización: 31 de enero de 2017.</string>
    <string name="btn_agree">Acepto</string>
</resources>