<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_terms_and_conditions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucaldas.ro.reduccionobesidad.TermsAndConditions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_title"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle"
                android:textSize="12dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="1dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle_paragraph2"
                android:textSize="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_paragraph2"
                android:textSize="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle_paragraph3"
                android:textSize="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_paragraph3"
                android:textSize="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle_paragraph4"
                android:textSize="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_paragraph4"
                android:textSize="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle_paragraph5"
                android:textSize="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_paragraph5"
                android:textSize="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle_paragraph6"
                android:textSize="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_paragraph6"
                android:textSize="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle_paragraph7"
                android:textSize="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_paragraph7"
                android:textSize="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle_paragraph8"
                android:textSize="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_paragraph8"
                android:textSize="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_subtitle_paragraph9"
                android:textSize="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_paragraph9"
                android:textSize="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnAgree"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_agree"
                android:background="@color/colorAccent"
                android:textColor="#fff"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
