<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator"
    tools:context="com.ucaldas.ro.reduccionobesidad.AddMenu">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id = "@+id/appBarAddMenu">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarColor"
            android:elevation="4dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:background="@drawable/ic_action_save"
                android:layout_marginRight="20dp"
                android:id="@+id/btn_save"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="55dp"
        tools:context="com.ucaldas.ro.reduccionobesidad.AddPost">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_post_title_new_data"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#37474f"
                    android:drawableLeft="@drawable/ic_tools"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_post_name"
                    android:layout_marginTop="20dp"
                    android:textColor="#37474f"
                    android:textStyle="bold"
                    android:id="@+id/txtName" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_input_layour_name">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textInputEditText" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_post_image"
                    android:layout_marginTop="40dp"
                    android:textColor="#37474f"
                    android:textStyle="bold"
                    android:id="@+id/txtImage" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/imagePreview"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/placeholder"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_post_choose_image"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:layout_marginTop="120dp"
                        android:paddingRight="15dp"
                        android:layout_alignLeft="@id/imagePreview"
                        android:layout_alignTop="@id/imagePreview"
                        android:layout_alignRight="@id/imagePreview"
                        android:layout_alignBottom="@id/imagePreview" />

                </RelativeLayout>

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_post_category"
                android:layout_marginTop="40dp"
                android:textColor="#37474f"
                android:textStyle="bold"
                android:id="@+id/lblCategory" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_post_frecuency"
                    android:layout_marginTop="40dp"
                    android:textColor="#37474f"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/frecuency_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>

