<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator"
    tools:context="com.ucaldas.ro.reduccionobesidad.ConfigurationActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id = "@+id/appBarAddMenu">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/activity_add_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ucaldas.ro.reduccionobesidad.ConfigurationActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/photoContainer"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@drawable/home_item_shadow"/>
            
            <Button
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="Cambiar Foto"
                android:textSize="12sp"
                android:layout_gravity="center"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/name_container"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/photoContainer">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conf_name"
                android:textStyle="italic"
                android:textSize="12sp"
                android:textColor="@color/form_labels"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/txt_input_layour_name"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputEditText"
                    android:backgroundTint="@color/colorAccent"
                    android:paddingTop="0dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:baselineAligned="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/name_container"
            android:layout_marginTop="10dp"
            android:id="@+id/gender_container">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_gender"
                    android:textColor="@color/form_labels"
                    android:textStyle="italic"
                    android:textSize="12sp"
                    android:id="@+id/lblCategory" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:theme="@style/ThemeSpinner"
                    android:spinnerMode="dropdown"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginTop="-8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:paddingLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_weight"
                    android:textColor="@color/form_labels"
                    android:textStyle="italic"
                    android:textSize="12sp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/txt_input_layour_weight"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textInputEditWeight"
                        android:backgroundTint="@color/colorAccent"
                        android:paddingTop="0dp" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender_container"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:text="Guardar Cambios"/>


        </LinearLayout>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
